--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">R</h2>
+    	<h2 style="color:#F2B300;"></h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">O</h2>
+    	<h2 style="color:#0719D4;"></h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">H</h2>
+    	<h2 style="color:#D14D39;"></h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">I</h2>
+    	<h2 style="color:#8FAD00;"></h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">N</h2>
+    	<h2 style="color:#8377E4;"></h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">I</h2>
+    	<h2 style="color:#99C96A;"></h2>
     </div>
     
 
@@ -119,7 +119,7 @@
 				<p>Do you know..?</p>
 				<p>today is just special</p>
 				<p>so special to you</p>
-				<p>अण्णा:- वाढदिवसाचा हार्दिक शुभेच्छा !!  </p>
+			<!--	<p>अण्णा:- वाढदिवसाचा हार्दिक शुभेच्छा !!  </p>
 				<p>आय :- वाढदिवसाचा हार्दिक शुभेच्छा !! </p>
 				<p>अप्पा :- वाढदिवसाचा हार्दिक शुभेच्छा !! </p>
 				<p>काकी :- वाढदिवसाचा हार्दिक शुभेच्छा ताई !! </p>
@@ -128,7 +128,7 @@
 				<p>Chetan:-Wish You Happy Birthday Tai !!</p>
 				<p>Hari:- Wish You Happy Birthday Tai !!</p>
 				<p></p>
-				<p></p>
+				<p></p>-->
 				
 		</div>
 		</div>
